message KVResponse {
    required uint32 errCode = 1;
    optional bytes value = 2;
    optional int32 pid = 3;
    optional int32 version = 4;
    optional int32 overloadWaitTime = 5;
    optional int32 membershipCount = 6;
}

